<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WeatherApp</string>
    <string name="main_city">Saint-Petersburg</string>
    <string name="main_temperature">+25</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="dt">+20</string>
    <string name="weather">Weather</string>
    <string name="commercial">Commercial</string>
    <string name="select_city">Select the city</string>
    <string name="search_city">Enter the city name</string>
    <string name="city_moscow">Moscow</string>
    <string name="city_saint_petersburg">Saint-Petersburg</string>
    <string name="city_sochi">Sochi</string>
    <string name="city_novosibirsk">Novosibirsk</string>
    <string name="city_kazan">Kazan</string>
    <string name="send_selected_city_button">OK</string>
    <string name="settings">Settings</string>
    <string name="temperature">Temperature:</string>
    <string name="wind_power">Wind power:</string>
    <string name="pressure">Pressure:</string>
    <string name="select_settings_button">OK</string>
    <string name="celsius">C˚</string>
    <string name="fahrenheit">F˚</string>
    <string name="wind_power_ms">m/s</string>
    <string name="wind_power_kmh">km/h</string>
    <string name="pressure_button_mmHg">mmHg</string>
    <string name="pressure_button_hPa">hPa</string>
    <string name="main_wind_power">10</string>
    <string name="main_pressure">760</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="select_city_button">Select city</string>
    <string name="main_wind_power_name">m/s</string>
    <string name="main_pressure_name">mmHg</string>
    <string name="date">26 april</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="dataUpdated">Data about weather updated</string>
    <string name="settingSaved">Setting saved</string>
    <string name="downloadError">Download error</string>
    <string name="Error">Error</string>
    <string name="ConnectionFalse">No internet connection</string>
    <string name="ServerError">Server is not available</string>
    <string name="weatherDescription">Cloudy</string>
</resources>
