<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_city"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/searchCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/search_city"
            android:inputType="text" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <RadioButton
                android:id="@+id/firstCityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/city_moscow" />

            <RadioButton
                android:id="@+id/secondCityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/city_saint_petersburg" />

            <RadioButton
                android:id="@+id/thirdCityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_sochi" />

            <RadioButton
                android:id="@+id/forthCityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_novosibirsk" />

            <RadioButton
                android:id="@+id/fifthCityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_kazan" />
        </RadioGroup>

        <Button
            android:id="@+id/selectCityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_city_button" />
    </LinearLayout>

</ScrollView>